[package]
name = "digital-garden-visitor-counter"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["local-render-test"]

[dependencies]
aws-config = { version = "0.56.1", default-features = false, features = ["client-hyper", "rustls", "rt-tokio"] }
aws-sdk-dynamodb = "0.30.0"
ciborium = "0.2.1"
isbot = "0.1.3"
lambda_http = { version = "0.8.1", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.2"
md-5 = "0.10.5"
once_cell = "1.18.0"
png = "0.17.10"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }

[dev-dependencies]
aws-smithy-http = "0.56.1"
http = "0.2.9"

[profile.release]
codegen-units = 1
debug = "line-tables-only"
incremental = false
lto = true
opt-level = 3
panic = "abort"